# api/swagger.yaml
@@ -1,268 +1,335 @@
 ---
 swagger: "2.0"
 info:
-  description: ""
-  version: "1.0.0"
-  title: "FreeLab Swagging Swagger APIs"
+  description: "OpenAPI specification for the RESTful API of the backend of the Hypermedia\
+    \ application course project a.y. 2019/2020.\n"
+  version: "2.0.0"
+  title: "Swagger FreeLab"
   contact:
-    email: "test@test.it"
+    email: "freelab@swagger.it"
 host: "martina-peressini-peresson.herokuapp.com"
 basePath: "/v1"
 tags:
-- name: "person"
-  description: "Operations about user"
-  externalDocs:
-    description: "Find out more about users"
-    url: "http://localhost"
-- name: "event"
-  description: "Operations about event"
-  externalDocs:
-    description: "Find out more about our events"
-    url: "http://localhost"
-- name: "service"
-  description: "Operations about event"
-  externalDocs:
-    description: "Find out more about our services"
-    url: "http://localhost"
+  - name: "event"
+    description: "Endpoints concerning the events of the association"
+  - name: "person"
+    description: "Endpoints concerning the members of the association"
+  - name: "service"
+    description: "Endpoints concerning the services of the association"
 schemes:
-- "http"
+  - "http"
 paths:
-  /people:
+  /events/by_month/{month}:
     get:
       tags:
-      - "person"
-      summary: "Get all the users"
-      description: "This can be done by everyone"
-      operationId: "retrieveUsers"
-      produces:
-      - "application/json"
-      parameters: []
-      responses:
-        "200":
-          description: "OK!"
-        "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
-      x-swagger-router-controller: "Person"
-  /person/by_id/{id}:
-    get:
-      tags:
-      - "person"
-      summary: "Get user by id"
-      description: ""
-      operationId: "getUserByID"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "The id that needs to be fetched."
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Person"
-        "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
-      x-swagger-router-controller: "Person"
-  /event/by_month/{month}:
-    get:
-      tags:
-      - "event"
-      summary: "Get events by month"
-      description: ""
+        - "event"
+      summary: "Returns all the events for the specified month"
       operationId: "getEventsByMonth"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "month"
-        in: "path"
-        description: "The month that needs to be fetched."
-        required: true
-        type: "string"
-        enum:
-        - "jan"
-        - "feb"
-        - "mar"
-        - "apr"
-        - "may"
-        - "jun"
-        - "jul"
-        - "aug"
-        - "sep"
-        - "oct"
-        - "nov"
-        - "dec"
+        - name: "month"
+          in: "path"
+          description: "Month for which events need to be retrieved."
+          required: true
+          type: "string"
+          enum:
+            - "jan"
+            - "feb"
+            - "mar"
+            - "apr"
+            - "may"
+            - "jun"
+            - "jul"
+            - "aug"
+            - "sep"
+            - "oct"
+            - "nov"
+            - "dec"
       responses:
         "200":
-          description: "successful operation"
+          description: "OK"
           schema:
-            $ref: "#/definitions/Event"
+            type: "array"
+            items:
+              $ref: "#/definitions/Event"
         "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
+          description: "Bad request."
+        "404":
+          description: "Events not found."
       x-swagger-router-controller: "Event"
   /event/by_id/{id}:
     get:
       tags:
-      - "event"
-      summary: "Get events by id"
-      description: ""
+        - "event"
+      summary: "Returns the event by its ID"
       operationId: "getEventById"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "id"
-        in: "path"
-        description: "The id that needs to be fetched."
-        required: true
-        type: "string"
+        - name: "id"
+          in: "path"
+          description: "Id of the event to be retrieved."
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         "200":
-          description: "successful operation"
+          description: "OK"
           schema:
             $ref: "#/definitions/Event"
         "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
+          description: "Bad request."
+        "404":
+          description: "Event not found."
       x-swagger-router-controller: "Event"
-  /services:
+  /event/by_id/{id}/organizer:
     get:
       tags:
-      - "service"
-      summary: "Get all the services"
-      description: "This can be done by everyone"
-      operationId: "RetrievesServices"
+        - "event"
+      summary: "Returns the organizer of the specified event"
+      operationId: "getEventOrganizer"
       produces:
-      - "application/json"
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the event."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Person"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "Event not found."
+      x-swagger-router-controller: "Event"
+  /event/by_id/{id}/service:
+    get:
+      tags:
+        - "event"
+      summary: "Returns the service presented in the specified event"
+      operationId: "getEventService"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the event."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Service"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "Event not found."
+      x-swagger-router-controller: "Event"
+  /people:
+    get:
+      tags:
+        - "person"
+      summary: "Returns all the member of the association"
+      operationId: "retrieveUsers"
+      produces:
+        - "application/json"
       parameters: []
       responses:
         "200":
-          description: "OK!"
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Person"
         "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
+          description: "Bad request."
+      x-swagger-router-controller: "Person"
+  /person/by_id/{id}:
+    get:
+      tags:
+        - "person"
+      summary: "Returns the member of the association by his/her ID"
+      operationId: "getUserByID"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the person to be retrieved."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Person"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "User not found."
+      x-swagger-router-controller: "Person"
+  /person/by_id/{id}/events:
+    get:
+      tags:
+        - "person"
+      summary: "Returns the events related to the specified member of the association"
+      operationId: "getUserEvents"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the person."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Event"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "User not found."
+      x-swagger-router-controller: "Person"
+  /person/by_id/{id}/services:
+    get:
+      tags:
+        - "person"
+      summary: "Returns the services related to the specified member of the association"
+      operationId: "getUserServices"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the person."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Service"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "User not found."
+      x-swagger-router-controller: "Person"
+  /services:
+    get:
+      tags:
+        - "service"
+      summary: "Returns all the services offered by the association"
+      operationId: "retrieveServices"
+      produces:
+        - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Service"
+        "400":
+          description: "Bad request."
       x-swagger-router-controller: "Service"
   /service/by_id/{id}:
     get:
       tags:
-      - "service"
-      summary: "Get service by id"
-      description: ""
+        - "service"
+      summary: "Returns the service by its ID"
       operationId: "getServiceById"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "id"
-        in: "path"
-        description: "The id that needs to be fetched."
-        required: true
-        type: "string"
+        - name: "id"
+          in: "path"
+          description: "Id of the service to be retrieved."
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         "200":
-          description: "successful operation"
+          description: "OK"
           schema:
             $ref: "#/definitions/Service"
         "400":
-          description: "Bad request"
-        "500":
-          description: "Server down"
+          description: "Bad request."
+        "404":
+          description: "Service not found."
+      x-swagger-router-controller: "Service"
+  /service/by_id/{id}/events:
+    get:
+      tags:
+        - "service"
+      summary: "Returns the events related to the specified service"
+      operationId: "getServiceEvents"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the service."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Event"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "Service not found."
+      x-swagger-router-controller: "Service"
+  /service/by_id/{id}/people:
+    get:
+      tags:
+        - "service"
+      summary: "Returns the people related to the specified service"
+      operationId: "getServicePeople"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id of the service."
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Person"
+        "400":
+          description: "Bad request."
+        "404":
+          description: "Service not found."
       x-swagger-router-controller: "Service"
 definitions:
-  Person:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "integer"
-        format: "int64"
-      surname:
-        type: "integer"
-        format: "int32"
-      description:
-        type: "string"
-        format: "int64"
-      image_url:
-        type: "string"
-        description: "URL of the profile image"
-      services:
-        type: "array"
-        items:
-          $ref: "#/definitions/Service"
-      events:
-        type: "array"
-        items:
-          $ref: "#/definitions/Event"
-    example:
-      surname: 1
-      image_url: "image_url"
-      name: 6
-      description: "description"
-      id: 0
-      services:
-      - presentation: "presentation"
-        name: "name"
-        image_urls:
-        - "image_urls"
-        - "image_urls"
-        practical_info: "practical_info"
-        id: 5
-        events:
-        - presentation: "presentation"
-          image_url: "image_url"
-          event_date: "2000-01-23T04:56:07.000+00:00"
-          name: "name"
-          practical_info: "practical_info"
-          id: 5
-        - presentation: "presentation"
-          image_url: "image_url"
-          event_date: "2000-01-23T04:56:07.000+00:00"
-          name: "name"
-          practical_info: "practical_info"
-          id: 5
-      - presentation: "presentation"
-        name: "name"
-        image_urls:
-        - "image_urls"
-        - "image_urls"
-        practical_info: "practical_info"
-        id: 5
-        events:
-        - presentation: "presentation"
-          image_url: "image_url"
-          event_date: "2000-01-23T04:56:07.000+00:00"
-          name: "name"
-          practical_info: "practical_info"
-          id: 5
-        - presentation: "presentation"
-          image_url: "image_url"
-          event_date: "2000-01-23T04:56:07.000+00:00"
-          name: "name"
-          practical_info: "practical_info"
-          id: 5
-      events:
-      - presentation: "presentation"
-        image_url: "image_url"
-        event_date: "2000-01-23T04:56:07.000+00:00"
-        name: "name"
-        practical_info: "practical_info"
-        id: 5
-      - presentation: "presentation"
-        image_url: "image_url"
-        event_date: "2000-01-23T04:56:07.000+00:00"
-        name: "name"
-        practical_info: "practical_info"
-        id: 5
   Event:
     type: "object"
     properties:
@@ -271,27 +338,62 @@ definitions:
         format: "int64"
       name:
         type: "string"
-      event_date:
+      date_time:
         type: "string"
         format: "date-time"
+      presentation:
+        type: "string"
       practical_info:
+        type: "string"
+      skill_level:
         type: "string"
       image_url:
         type: "string"
-        description: "URL of the event image"
-      presentation:
-        type: "string"
-      organizer:
-        $ref: "#/definitions/Person"
-      service:
-        $ref: "#/definitions/Service"
     example:
-      presentation: "presentation"
+      id: 1
+      name: "event name"
+      date_time: "2017-07-21T17:32:28Z"
+      presentation: "event presentation"
+      practical_info: "event practical_info"
+      skill_level: "skill level required"
       image_url: "image_url"
-      event_date: "2000-01-23T04:56:07.000+00:00"
-      name: "name"
-      practical_info: "practical_info"
-      id: 5
+  Person:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+      surname:
+        type: "string"
+      email:
+        type: "string"
+        format: "email"
+      telephone:
+        type: "string"
+      description:
+        type: "string"
+      leitmotiv:
+        type: "string"
+      skills:
+        type: "array"
+        items:
+          type: "string"
+      image_url:
+        type: "string"
+    example:
+      id: 1
+      name: "Stefano"
+      surname: "Maini"
+      email: "stefano.maini@mail.com"
+      telephone: "0123456789"
+      description: "person description"
+      leitmotiv: "It Won’t Fail Because of Me"
+      skills:
+        - "Python pro master"
+        - "Illustrator lover"
+      image_url: "image_url"
   Service:
     type: "object"
     properties:
@@ -302,34 +404,18 @@ definitions:
         type: "string"
       presentation:
         type: "string"
-      image_urls:
+      practical_info:
+        type: "string"
+      images_url:
         type: "array"
         items:
           type: "string"
-      practical_info:
-        type: "string"
-      events:
-        type: "array"
-        items:
-          $ref: "#/definitions/Event"
     example:
-      presentation: "presentation"
-      name: "name"
-      image_urls:
-      - "image_urls"
-      - "image_urls"
-      practical_info: "practical_info"
-      id: 5
-      events:
-      - presentation: "presentation"
-        image_url: "image_url"
-        event_date: "2000-01-23T04:56:07.000+00:00"
-        name: "name"
-        practical_info: "practical_info"
-        id: 5
-      - presentation: "presentation"
-        image_url: "image_url"
-        event_date: "2000-01-23T04:56:07.000+00:00"
-        name: "name"
-        practical_info: "practical_info"
-        id: 5
+      id: 1
+      name: "service name"
+      presentation: "service presentation"
+      practical_info: "service practical_info"
+      images_url:
+        - "image_url_1"
+        - "image_url_2"
+        - "image_url_3"
